# PGNY_assessment

./: README.md  app.py  crypto_api.py  helpers.py  pyproject.toml
models/: coin_model.py  mean_price_model.py  trade_log_model.py
resources/: coin_resource.py  trade_resource.py
